Refactor web handling: consolidate HTML module, remove unused files, and enhance HTTP client methods

--- a/src/embassy-access-modules/embassy-access-italian/embassy-access-italian.fsproj
+++ b/src/embassy-access-modules/embassy-access-italian/embassy-access-italian.fsproj
@@ -12,8 +12,7 @@
       <Compile Include="services\prenotami\Client.fs" />
       <Compile Include="services\prenotami\Html.fs" />
       <Compile Include="services\prenotami\Web.Http.fs" />
-      <Compile Include="services\prenotami\Web.Html.Common.fs" />
-      <Compile Include="services\prenotami\Web.Html.InitialPage.fs" />
+      <Compile Include="services\prenotami\Web.Html.fs" />
       <Compile Include="services\prenotami\Service.fs" />
     </ItemGroup>
 
