--- a/src/embassy-access-worker/settings/appsettings.yaml
+++ b/src/embassy-access-worker/settings/appsettings.yaml
@@ -6,4 +6,5 @@ Logging:
 
 Persistence:
   FileSystem: ..\..\..\data
-  Key: "e3b0c442-98fc-1c14-9afc-4c6f8d2a1e7b"
+  Encryption:
+    Key: "e3b0c442-98fc-1c14-9afc-4c6f8d2a1e7b"
