--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -65,6 +66,14 @@
         <Compile Include="controllers\Services.fs" />
         <Compile Include="controllers\Controller.fs" />
         <Compile Include="Client.fs" />
+        <Compile Include="Program.fs" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="appsettings.yaml">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <Link>appsettings.yaml</Link>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
