--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -5,6 +5,6 @@ Logging:
     Default: Debug
 
 Persistence:
-  FileSystem: ..\..\..\data
+  FileSystem: data
   Encryption:
     Key: "e3b0c442-98fc-1c14-9afc-4c6f8d2a1e7b"
